# SCC

./: .gitignore  README.md
Bomberman/: Bomberman.cbp  Bomberman.depend  Bomberman.layout  README  game.ini
BubbleHunt/: BlubHunt.cbp  BlubHunt.depend  BlubHunt.layout  background.cpp  background.h  enemie.cpp  enemie.h  enemieweapon.cpp  enemieweapon.h  main.cpp  player.cpp  player.h  weapon.cpp  weapon.h
LexThree/: CMakeLists.txt
LexThree/data/: game.ini
LexThree/data/gfx/: bullet.pdn  enemy.pdn  soldier.pdn
LexThree/data/levels/: lvl1.tmx  menu.tmx
LexThree/data/sfx/: select.sfs
LexThree/include/: button.hpp  enemy.hpp  entity.hpp  game.hpp  gamestate.hpp  map.hpp  menustate.hpp  property.hpp  shared.hpp  state.hpp  utility.hpp
LexThree/src/: button.cpp  enemy.cpp  entity.cpp  game.cpp  gamestate.cpp  main.cpp  map.cpp  menustate.cpp  property.cpp  shared.cpp  utility.cpp
Lunar Lander/: Crazy Lander.cbp  Crazy Lander.depend  Crazy Lander.layout  button.cpp  button.h  game.cpp  game.h  main.cpp  map.cpp  map.h  menu.cpp  menu.h  ship.cpp  ship.h
Osiris/: Osiris.cbp  Osiris.depend  Osiris.layout  beziercurve.cpp  beziercurve.hpp  button.cpp  button.hpp  comet.cpp  comet.hpp  enemy.cpp  enemy.hpp  game.cpp  game.hpp  gamestate.cpp  gamestate.hpp  introstate.cpp  introstate.hpp  main.cpp  menustate.cpp  menustate.hpp  normalshot.cpp  normalshot.hpp  object.cpp  object.hpp  shared.cpp  shared.hpp  ship.cpp  ship.hpp  shot.cpp  shot.hpp  state.hpp  tail.cpp  tail.hpp  texturedshape.cpp  texturedshape.hpp
Spacemind/: README  Spacemind.cbp  Spacemind.depend  Spacemind.layout  (+1 more)
(+62 files in other folders)
